// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<withMaterialTheme(Radio) /> 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleLocation="center"
  style={
    Array [
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      ],
      Object {
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
      },
    ]
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "fontSize": 24,
          },
          Array [
            undefined,
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "absolute",
        },
        Object {
          "borderRadius": 0,
          "height": 1,
          "width": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "borderRadius": 0,
          "height": 1,
          "left": -0,
          "opacity": 0,
          "position": "absolute",
          "top": -0,
          "width": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "borderRadius": 0,
          "height": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<withMaterialTheme(Radio) accent checked /> 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleLocation="center"
  style={
    Array [
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      ],
      Object {
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
      },
    ]
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#FF4081",
            "fontSize": 24,
          },
          Array [
            undefined,
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "absolute",
        },
        Object {
          "borderRadius": 0,
          "height": 1,
          "width": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FF4081",
          "borderRadius": 0,
          "height": 1,
          "left": -0,
          "opacity": 0,
          "position": "absolute",
          "top": -0,
          "width": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FF4081",
          "borderRadius": 0,
          "height": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<withMaterialTheme(Radio) checked /> 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleLocation="center"
  style={
    Array [
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      ],
      Object {
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
      },
    ]
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#3F51B5",
            "fontSize": 24,
          },
          Array [
            undefined,
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "absolute",
        },
        Object {
          "borderRadius": 0,
          "height": 1,
          "width": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#3F51B5",
          "borderRadius": 0,
          "height": 1,
          "left": -0,
          "opacity": 0,
          "position": "absolute",
          "top": -0,
          "width": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#3F51B5",
          "borderRadius": 0,
          "height": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<withMaterialTheme(Radio) disabled /> 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleLocation="center"
  style={
    Array [
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
      ],
      Object {
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
      },
    ]
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "width": 24,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.38)",
            "fontSize": 24,
          },
          Array [
            undefined,
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "absolute",
        },
        Object {
          "borderRadius": 0,
          "height": 1,
          "width": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "borderRadius": 0,
          "height": 1,
          "left": -0,
          "opacity": 0,
          "position": "absolute",
          "top": -0,
          "width": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "borderRadius": 0,
          "height": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 0,
        }
      }
    />
  </View>
</View>
`;
